--- a/CSS/index.css
+++ b/CSS/index.css
@@ -60,7 +60,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark{
     }
     .listas{
         margin-left: 150px;
-        margin-right: auto;    
+        margin-right: 120px;
     }
     .body-gral{
         background: rgba(235, 236, 237, 0.27);
