--- a/CSS/index.css
+++ b/CSS/index.css
@@ -20,9 +20,10 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark{
     font-family: Arial, Helvetica, sans-serif;
 }
 #carouselExampleControls{
-    ;
-    margin-left: 50px;
-    margin-right: 50px;
+    height: 400px;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 60px;
     margin-bottom: 60px;
     padding-top: 25px;
@@ -33,7 +34,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark{
 }
 .divfooter{
     text-align: center;
-    margin-left: 100px;
+    margin-left: auto;
 }
 .nav.col-md-4.justify-content-end.list-unstyled.d-flex{
     text-align: left;
@@ -43,25 +44,26 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark{
     height: 600px;
 }
 .formulario{
-    margin-left: 150px;
+    margin-left: auto;
     margin-right: auto;
     font-family: Arial, Helvetica, sans-serif;
 }
 .p{
-    margin-left: 150px;
+    margin-left: auto;
     margin-right: auto;
     font-family: Arial, Helvetica, sans-serif;
 }
 .sucursales{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 25px;
-    margin-bottom: 25px;
     }
     .listas{
         margin-left: 150px;
-        margin-right: 120px;
+        margin-right: 130px;
     }
     .body-gral{
         background: rgba(235, 236, 237, 0.27);
+    }
+    .d-block.w-100{
+        height: 350px;
     }
